[package]
name = "jetx_scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jetx_scraper"
path = "src/main.rs"

[dependencies]
# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = "0.21"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Colored terminal output
colored = "2"

# URL handling
url = "2"

# Futures utilities
futures-util = "0.3"

[profile.release]
opt-level = 3
