[package]
name = "jetx_scraper"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "jetx_scraper"
path = "src/main.rs"

[dependencies]
# WebSocket — with native-tls so we can pass a permissive connector
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite        = "0.21"

# Async runtime
tokio = { version = "1", features = ["full"] }

# JSON
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP health server (keeps the cloud process alive)
actix-web = "4"

# TLS
native-tls = "0.2"

# Futures
futures-util = "0.3"

# Colored output
colored = "2"

# Signal handling (Ctrl-C / SIGTERM)
ctrlc = { version = "3", features = ["termination"] }

[profile.release]
opt-level = 3
