[package]
name    = "jetx_scraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jetx_scraper"
path = "src/main.rs"

[dependencies]
# ── WebSocket — with native-tls feature, exactly like the working reference ──
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite        = { version = "0.21", features = ["native-tls"] }

# ── TLS — same builder the working reference uses ────────────────────────────
native-tls = "0.2"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Futures ───────────────────────────────────────────────────────────────────
futures-util = "0.3"

# ── JSON ──────────────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── HTTP server (keeps cloud instance alive) — same as working reference ─────
actix-web = "4"

# ── Terminal colours ──────────────────────────────────────────────────────────
colored = "2"

[profile.release]
opt-level = 3
strip     = "symbols"   # smaller binary, faster cold start
